src/parser/PmmParser.java
// Generated from src/parser/Pmm.g4 by ANTLR 4.7
package parser;

 import ast.*;
 import ast.definitions.*;
 import ast.expressions.*;
 import ast.statements.*;
 import ast.types.*;
 import ast.errors.*;
 import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, TRASH=38, 
		COMMENT_ONE_LINE=39, COMMENT_IN_LINES=40, ID=41, REAL_CONSTANT=42, CHAR_CONSTANT=43, 
		INT_CONSTANT=44;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_definition = 2, RULE_variable_definition = 3, 
		RULE_vars_definition = 4, RULE_function_definition = 5, RULE_simple_type = 6, 
		RULE_function_type = 7, RULE_params = 8, RULE_ids = 9, RULE_type = 10, 
		RULE_field_definition = 11, RULE_statements = 12, RULE_statement = 13, 
		RULE_expressions = 14, RULE_expression = 15;
	public static final String[] ruleNames = {
		"program", "definitions", "definition", "variable_definition", "vars_definition", 
		"function_definition", "simple_type", "function_type", "params", "ids", 
		"type", "field_definition", "statements", "statement", "expressions", 
		"expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'def'", "'main'", "'('", "')'", "':'", "'{'", "'}'", "';'", "'int'", 
		"'double'", "'char'", "','", "'['", "']'", "'struct'", "'='", "'input'", 
		"'print'", "'if'", "'else'", "'while'", "'return'", "'.'", "'-'", "'!'", 
		"'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", 
		"'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "TRASH", "COMMENT_ONE_LINE", "COMMENT_IN_LINES", "ID", "REAL_CONSTANT", 
		"CHAR_CONSTANT", "INT_CONSTANT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext definitions;
		public Token def;
		public Token main;
		public Token ft;
		public Vars_definitionContext vars_definition;
		public StatementsContext statements;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public Vars_definitionContext vars_definition() {
			return getRuleContext(Vars_definitionContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			((ProgramContext)_localctx).definitions = definitions();
			setState(33);
			((ProgramContext)_localctx).def = match(T__0);
			setState(34);
			((ProgramContext)_localctx).main = match(T__1);
			setState(35);
			((ProgramContext)_localctx).ft = match(T__2);
			setState(36);
			match(T__3);
			setState(37);
			match(T__4);
			setState(38);
			match(T__5);
			setState(39);
			((ProgramContext)_localctx).vars_definition = vars_definition();
			setState(40);
			((ProgramContext)_localctx).statements = statements();
			setState(41);
			match(T__6);
			setState(42);
			match(EOF);
			((ProgramContext)_localctx).definitions.list.add(new FuncDefinition(
													((ProgramContext)_localctx).def.getLine(),
													((ProgramContext)_localctx).def.getCharPositionInLine()+1,
													(((ProgramContext)_localctx).main!=null?((ProgramContext)_localctx).main.getText():null),
													new FunctionType(((ProgramContext)_localctx).ft.getLine(),
																	((ProgramContext)_localctx).def.getCharPositionInLine()+1,
																	new ArrayList<VariableDefinition>(),
																	VoidType.getInstance()),
													((ProgramContext)_localctx).vars_definition.list,
													((ProgramContext)_localctx).statements.list));
						((ProgramContext)_localctx).ast =  new Program(
							((ProgramContext)_localctx).definitions.list.get(0).getLine(),
							((ProgramContext)_localctx).definitions.list.get(0).getColumn(),
							((ProgramContext)_localctx).definitions.list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();;
		public DefinitionContext definition;
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(45);
					((DefinitionsContext)_localctx).definition = definition();
					for (Definition def: ((DefinitionsContext)_localctx).definition.ast) _localctx.list.add(def);
					}
					} 
				}
				setState(52);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();;
		public Variable_definitionContext variable_definition;
		public Function_definitionContext function_definition;
		public Variable_definitionContext variable_definition() {
			return getRuleContext(Variable_definitionContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				((DefinitionContext)_localctx).variable_definition = variable_definition();
				setState(54);
				match(T__7);
				for (Definition def : ((DefinitionContext)_localctx).variable_definition.ast)
														_localctx.ast.add(def);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				((DefinitionContext)_localctx).function_definition = function_definition();
				_localctx.ast.add(((DefinitionContext)_localctx).function_definition.ast);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_definitionContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();;
		public IdsContext ids;
		public TypeContext type;
		public IdsContext ids() {
			return getRuleContext(IdsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Variable_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_definition; }
	}

	public final Variable_definitionContext variable_definition() throws RecognitionException {
		Variable_definitionContext _localctx = new Variable_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((Variable_definitionContext)_localctx).ids = ids();
			for (Variable id : ((Variable_definitionContext)_localctx).ids.list)
							_localctx.ast.add(new VariableDefinition(
								id.getLine(),
								id.getColumn(),
								id.getName(),
								null));
			setState(64);
			match(T__4);
			setState(65);
			((Variable_definitionContext)_localctx).type = type();
			for (VariableDefinition var : _localctx.ast){
					   		var.setType(((Variable_definitionContext)_localctx).type.ast);}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Vars_definitionContext extends ParserRuleContext {
		public List<VariableDefinition> list = new ArrayList<VariableDefinition>();;
		public Variable_definitionContext variable_definition;
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public Vars_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars_definition; }
	}

	public final Vars_definitionContext vars_definition() throws RecognitionException {
		Vars_definitionContext _localctx = new Vars_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vars_definition);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(68);
					((Vars_definitionContext)_localctx).variable_definition = variable_definition();
					setState(69);
					match(T__7);
					for (VariableDefinition var : ((Vars_definitionContext)_localctx).variable_definition.ast)
															_localctx.list.add(var);
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token def;
		public Token ID;
		public Function_typeContext function_type;
		public Vars_definitionContext vars_definition;
		public StatementsContext statements;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public Function_typeContext function_type() {
			return getRuleContext(Function_typeContext.class,0);
		}
		public Vars_definitionContext vars_definition() {
			return getRuleContext(Vars_definitionContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((Function_definitionContext)_localctx).def = match(T__0);
			setState(78);
			((Function_definitionContext)_localctx).ID = match(ID);
			setState(79);
			((Function_definitionContext)_localctx).function_type = function_type();
			setState(80);
			match(T__5);
			setState(81);
			((Function_definitionContext)_localctx).vars_definition = vars_definition();
			setState(82);
			((Function_definitionContext)_localctx).statements = statements();
			setState(83);
			match(T__6);
			((Function_definitionContext)_localctx).ast =  new FuncDefinition(
																			((Function_definitionContext)_localctx).def.getLine(),
																			((Function_definitionContext)_localctx).def.getCharPositionInLine()+1,
																			(((Function_definitionContext)_localctx).ID!=null?((Function_definitionContext)_localctx).ID.getText():null),
																			((Function_definitionContext)_localctx).function_type.ast,
																			((Function_definitionContext)_localctx).vars_definition.list,
																			((Function_definitionContext)_localctx).statements.list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_typeContext extends ParserRuleContext {
		public SimpleType ast;
		public Simple_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_type; }
	}

	public final Simple_typeContext simple_type() throws RecognitionException {
		Simple_typeContext _localctx = new Simple_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simple_type);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(T__8);
				((Simple_typeContext)_localctx).ast =  IntType.getInstance();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				match(T__9);
				((Simple_typeContext)_localctx).ast =  DoubleType.getInstance();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				match(T__10);
				((Simple_typeContext)_localctx).ast =  CharType.getInstance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_typeContext extends ParserRuleContext {
		public FunctionType ast;
		public Token first;
		public ParamsContext params;
		public Simple_typeContext simple_type;
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Simple_typeContext simple_type() {
			return getRuleContext(Simple_typeContext.class,0);
		}
		public Function_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_type; }
	}

	public final Function_typeContext function_type() throws RecognitionException {
		Function_typeContext _localctx = new Function_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			((Function_typeContext)_localctx).first = match(T__2);
			setState(95);
			((Function_typeContext)_localctx).params = params();
			setState(96);
			match(T__3);
			setState(97);
			match(T__4);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) {
				{
				setState(98);
				((Function_typeContext)_localctx).simple_type = simple_type();
				}
			}

			if(((Function_typeContext)_localctx).simple_type == null) 
								((Function_typeContext)_localctx).ast =  new FunctionType(
											((Function_typeContext)_localctx).first.getLine(),
											((Function_typeContext)_localctx).first.getCharPositionInLine()+1,
											((Function_typeContext)_localctx).params.list,
											VoidType.getInstance());
							else
								((Function_typeContext)_localctx).ast =  new FunctionType(
											((Function_typeContext)_localctx).first.getLine(),
											((Function_typeContext)_localctx).first.getCharPositionInLine()+1,
											((Function_typeContext)_localctx).params.list,
											((Function_typeContext)_localctx).simple_type.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<VariableDefinition> list = new ArrayList<VariableDefinition>();;
		public Token id1;
		public Simple_typeContext s1;
		public Token id2;
		public Simple_typeContext s2;
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public List<Simple_typeContext> simple_type() {
			return getRuleContexts(Simple_typeContext.class);
		}
		public Simple_typeContext simple_type(int i) {
			return getRuleContext(Simple_typeContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(103);
				((ParamsContext)_localctx).id1 = match(ID);
				setState(104);
				match(T__4);
				setState(105);
				((ParamsContext)_localctx).s1 = simple_type();
				}
			}

			if(((ParamsContext)_localctx).id1 != null)
						_localctx.list.add(new VariableDefinition(((ParamsContext)_localctx).id1.getLine(),
													((ParamsContext)_localctx).id1.getCharPositionInLine()+1,
													(((ParamsContext)_localctx).id1!=null?((ParamsContext)_localctx).id1.getText():null),
													((ParamsContext)_localctx).s1.ast));
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(109);
				match(T__11);
				setState(110);
				((ParamsContext)_localctx).id2 = match(ID);
				setState(111);
				match(T__4);
				setState(112);
				((ParamsContext)_localctx).s2 = simple_type();
				if(((ParamsContext)_localctx).id2 != null)
							_localctx.list.add(new VariableDefinition(((ParamsContext)_localctx).id2.getLine(),
														((ParamsContext)_localctx).id2.getCharPositionInLine()+1,
														(((ParamsContext)_localctx).id2!=null?((ParamsContext)_localctx).id2.getText():null),
														((ParamsContext)_localctx).s2.ast));
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdsContext extends ParserRuleContext {
		public List<Variable> list = new ArrayList<Variable>();;
		public Token id1;
		public Token id2;
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public IdsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ids; }
	}
